# ChangeLog for app-emulation/xen-tools
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.16 2006/08/10 21:29:01 swegener Exp $

  10 Aug 2006; Sven Wegener <swegener@gentoo.org>
  +files/xen-tools-3.0.2-bxclobber.patch,
  +files/xen-tools-3.0.2-pushpop.patch, -files/hardened-bx-clobber.patch,
  metadata.xml, xen-tools-3.0.2-r2.ebuild:
  Fix push and pop usage for amd64, bug #142682. Disable the 32bit-only
  vmxassist, if we can't compile x86 32bit code, bug #138314.

  10 Aug 2006; Andrew Ross <aross@gentoo.org> xen-tools-3.0.2-r2.ebuild:
  Fix minor bug (debug USE flag ignored) introduced by the fix for bug #124361

  10 Aug 2006; Andrew Ross <aross@gentoo.org>
  +files/xen-tools-3.0.2-test-uuid.patch,
  +files/xen-tools-3.0.2-test-xauthority.patch, metadata.xml,
  xen-tools-3.0.2-r1.ebuild, xen-tools-3.0.2-r2.ebuild:
  Fix bug #141233 and add myself as a maintainer.

*xen-tools-3.0.2-r2 (04 Aug 2006)

  04 Aug 2006; Chris Bainbridge <chrb@gentoo.org>
  +xen-tools-3.0.2-r2.ebuild:
  Add support for vnc and sdl - thanks to Nick Devito and Andrew Ross in bug
  #124361

*xen-tools-3.0.2-r1 (09 Jun 2006)

  09 Jun 2006; Chris Bainbridge <chrb@gentoo.org> -xen-tools-3.0.2.ebuild,
  +xen-tools-3.0.2-r1.ebuild:
  Clean up .pyc files, thanks to Andrew Ross, bug #136159

  02 Jun 2006; Roy Marples <uberlord@gentoo.org>
  +files/xen-tools-3.0.2--as-needed.patch, -xen-tools-3.0.1.ebuild,
  -xen-tools-3.0.1_p9029.ebuild, xen-tools-3.0.2.ebuild:
  Add patch to enable --as-needed LDFLAG, #135145

  26 Apr 2006; Aron Griffis <agriffis@gentoo.org> xen-tools-3.0.1.ebuild,
  xen-tools-3.0.1_p9029.ebuild, xen-tools-3.0.2.ebuild:
  Remove ~ia64 since this ebuild deps on app-emulation/xen, which won't have
  ia64 keywords for a while yet

  11 Apr 2006; <chrb@gentoo.org> +files/hardened-bx-clobber.patch,
  xen-tools-3.0.2.ebuild:
  add hardened patch and IUSE flag, #129491
