@@ -1,0 +1,5 @@
+/var/log/xen-consoles/*.log {
+	rotate 7
+	missingok
+	compress
+}
