@@ -1,21 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>no-herd</herd>
-<maintainer>
-  <email>chrb@gentoo.org</email>
-  <name>Chris Bainbridge</name>
-</maintainer>
-<maintainer>
-  <email>agriffis@gentoo.org</email>
-  <name>Aron Griffis</name>
-</maintainer>
-<maintainer>
-  <email>aross@gentoo.org</email>
-  <name>Andrew Ross</name>
-</maintainer>
-<maintainer>
-  <email>swegener@gentoo.org</email>
-  <name>Sven Wegener</name>
-</maintainer>
+<herd>xen</herd>
 </pkgmetadata>
