@@ -1,6 +1,16 @@
 # ChangeLog for app-emulation/xen-tools
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.16 2006/08/10 21:29:01 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.17 2006/08/14 07:11:47 aross Exp $
+
+*xen-tools-3.0.2-r3 (15 Aug 2006)
+
+  15 Aug 2006; Andrew Ross <aross@gentoo.org> +files/xen-consoles.logrotate,
+  -files/xend-conf, +files/xendomains.confd, +files/xendomains.initd,
+  +files/xendomains-screen.confd, metadata.xml, -xen-tools-3.0.2-r1.ebuild,
+  xen-tools-3.0.2-r2.ebuild, +xen-tools-3.0.2-r3.ebuild:
+  Fix bugs #141981, #142011, #141866, and #137886. Thanks to Brad Plant
+  <bplant@westnet.com.au>, Nedd Ludd <solar@gentoo.org>, Nick Devito
+  <nick125@gmail.com>, and Mike Williams <mike@gaima.co.uk>.
 
   10 Aug 2006; Sven Wegener <swegener@gentoo.org>
   +files/xen-tools-3.0.2-bxclobber.patch,
